Fixed background overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,11 @@
 
+.App{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
 .App-body {
     background-color: #282c34;
     min-height: 100vh;
